[package]
name = "yb-a-book-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = ["background-reader"] }
yb-tcp-contracts = { git = "https://github.com/my-cfd-platform/yb-tcp-contracts.git", tag="0.1.3" }
my-tcp-sockets = { tag = "0.1.7", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }
service-sdk = {git = "https://github.com/MyJetTools/service-sdk.git", tag = "0.1.6", features = ["no-sql", "grpc-server"]}
my-nosql-contracts = { tag = "0.1.16", git = "https://github.com/my-cfd-platform/my-nosql-contracts.git" }
my-no-sql-tcp-reader = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-no-sql-tcp-reader.git" }
my-seq-logger = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-seq-logger.git" }
flurl = { git="https://github.com/MyJetTools/fl-url.git", tag = "0.2.5" }
my-telemetry-writer = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry-writer.git" }
my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
prost = "*"
prost-types = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
serde = "*"
serde_yaml = "*"
serde_json = "*"
[build-dependencies]
tonic-build = { version = "0.9.1", features = ["prost"] }