[package]
name = "yb-a-book-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

service-sdk = { git = "https://github.com/MyJetTools/service-sdk", tag = "0.2.4", features = [
    "macros",
    "grpc",
    "my-nosql-data-reader-sdk",
] }
my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }
yb-tcp-contracts = { git = "https://github.com/my-cfd-platform/yb-tcp-contracts.git", tag = "0.1.5" }
my-tcp-sockets = { tag = "0.1.8", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }
my-nosql-contracts = { tag = "0.1.23", git = "https://github.com/my-cfd-platform/my-nosql-contracts.git" }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
tokio = { version = "*", features = ["full"] }
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.60"
prost = "*"
prost-types = "*"
[build-dependencies]
tonic-build = { version = "0.10.0", features = ["prost"] }
