[package]
name = "yb-a-book-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { git = "https://github.com/MyJetTools/service-sdk", tag = "0.2.5", features = [
    "macros",
    "grpc",
    "my-nosql-data-reader-sdk",
] }

yb-tcp-contracts = { git = "https://github.com/my-cfd-platform/yb-tcp-contracts.git", tag = "0.1.5" }
my-tcp-sockets = { tag = "0.1.8", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }
my-nosql-contracts = { tag = "0.1.24", git = "https://github.com/my-cfd-platform/my-nosql-contracts.git" }

async-trait = "*"
tokio = { version = "*", features = ["full"] }
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
prost = "*"
prost-types = "*"

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
